--- a/RBighornThesisGPSDataCleaning.Rmd
+++ b/RBighornThesisGPSDataCleaning.Rmd
@@ -8,6 +8,8 @@ knitr::opts_chunk$set(echo = TRUE)
 setwd("/Users/Danielle Glass/Documents/RWorkingDirectory/Sheepies2/Sheepies2")
 ```
 
+### Cutting the GPS Data
+
 ## Subsetting by Range & Individual Sheep ID
 
 First, I uploaded the GPS data. I checked for duplicates - there were none. Then, I subset the data for only the mountain ranges that I am interested in: South Bristols (BrsS), Marbles (Marb), Nopah (Nopa), Castle-Piute (CMPR), and Newberry-Rodman-Ord (NROM). Then I subset to only the individual bighorn that I am interested in - those with fix rates of 4 hours or less.
@@ -35,10 +37,16 @@ allgpsdata <- read.csv("AllGPSData20190501to20190912.csv", header = TRUE, sep = 
 library(tidyverse)
 summary(duplicated(allgpsdata))
 rangegpsdata <- allgpsdata[allgpsdata$MountainRange == "BrsS" | allgpsdata$MountainRange == "Marb" | allgpsdata$MountainRange == "Nopa" | allgpsdata$MountainRange == "CMPR" | allgpsdata$MountainRange == "NROM", ]
-View(rangegpsdata)
+# View(rangegpsdata)
 # str(rangegpsdata)
 rangeidgpsdata <- rangegpsdata[rangegpsdata$KI_Known_ID == "BHS_1581" | rangegpsdata$KI_Known_ID == "BHS_1595" | rangegpsdata$KI_Known_ID == "BHS_1588" | rangegpsdata$KI_Known_ID == "BHS_1580" | rangegpsdata$KI_Known_ID == "BHS_1738" | rangegpsdata$KI_Known_ID == "BHS_1568" | rangegpsdata$KI_Known_ID == "BHS_1565" | rangegpsdata$KI_Known_ID == "BHS_1567" | rangegpsdata$KI_Known_ID == "BHS_1564" | rangegpsdata$KI_Known_ID == "BHS_1677" | rangegpsdata$KI_Known_ID == "BHS_1563" | rangegpsdata$KI_Known_ID == "BHS_1589" | rangegpsdata$KI_Known_ID == "BHS_1584" | rangegpsdata$KI_Known_ID == "BHS_1582" | rangegpsdata$KI_Known_ID == "BHS_1577" | rangegpsdata$KI_Known_ID == "BHS_1683" | rangegpsdata$KI_Known_ID == "BHS_1682" | rangegpsdata$KI_Known_ID == "BHS_1684" | rangegpsdata$KI_Known_ID == "BHS_1688" | rangegpsdata$KI_Known_ID == "BHS_1685" | rangegpsdata$KI_Known_ID == "BHS_1689" | rangegpsdata$KI_Known_ID == "BHS_1687" | rangegpsdata$KI_Known_ID == "BHS_1686" | rangegpsdata$KI_Known_ID == "BHS_1736" | rangegpsdata$KI_Known_ID == "BHS_1740" | rangegpsdata$KI_Known_ID == "BHS_1739" | rangegpsdata$KI_Known_ID == "BHS_1730" | rangegpsdata$KI_Known_ID == "BHS_1733", ]
-View(rangeidgpsdata)
+# View(rangeidgpsdata)
+rangeidgpsdata$TimeLocal <- as.character(rangeidgpsdata$TimeLocal)
+rangeidgpsdata$DateTimeLocalTest <- rangeidgpsdata$DateTimeLocal
+library(lubridate)
+rangeidgpsdata$DateTimeLocalTest <- strptime(rangeidgpsdata$DateTimeLocalTest, "%m/%d/%Y %H:%M")
+rangeidgpsdata$DateTimeLocalTestct <- as.POSIXct(rangeidgpsdata$DateTimeLocalTest, tz = "America/Los_Angeles", format = "%m/%d/%Y %H:%M")
+
 ```
 Subsetting the data to when I had camera data for
 
@@ -96,8 +104,9 @@ nromidgpsdata <- rangeidgpsdata[rangeidgpsdata$MountainRange == "NROM", ]
 nromidgpsdatacut <- nromidgpsdata[(nromidgpsdata$DateTimeLocalTestct >= as.POSIXct("2019-06-28 00:00:00") & nromidgpsdata$DateTimeLocalTestct <= as.POSIXct("2019-07-01 23:59:59")) | (nromidgpsdata$DateTimeLocalTestct >= as.POSIXct("2019-07-10 00:00:00") & nromidgpsdata$DateTimeLocalTestct <= as.POSIXct("2019-07-12 23:59:59")) | (nromidgpsdata$DateTimeLocalTestct >= as.POSIXct("2019-07-21 00:00:00") & nromidgpsdata$DateTimeLocalTestct <= as.POSIXct("2019-07-21 23:59:59")) | (nromidgpsdata$DateTimeLocalTestct >= as.POSIXct("2019-08-09 00:00:00") & nromidgpsdata$DateTimeLocalTestct <= as.POSIXct("2019-08-18 23:59:59")) | (nromidgpsdata$DateTimeLocalTestct >= as.POSIXct("2019-08-21 00:00:00") & nromidgpsdata$DateTimeLocalTestct <= as.POSIXct("2019-08-21 23:59:59")), ]
 
 allidgpsdatacut <- rbind(marbidgpsdatacut, sbrsidgpsdatacut, cmpridgpsdatacut, nopaidgpsdatacut, nromidgpsdatacut)
-
-
+# I removed the entries with missing latitudes or longitudes from the dataset.
+allidgpsdatacut1 <- allidgpsdatacut[is.na(allidgpsdatacut$Latitude) == FALSE, ]
+allidgpsdatacut2 <- allidgpsdatacut1[is.na(allidgpsdatacut1$Longitude) == FALSE, ]
 
 ```
 
@@ -109,99 +118,33 @@ After double checking that all the four-hour collars were on the same schedule, 
 
 ```{r}
 
-## PICK UP HERE TOMORROW!!! NEED TO SWITCH VARIABLES TO NEW VARIABLES!!!!!
-
-rangeidgpsdata$TimeLocal <- as.character(rangeidgpsdata$TimeLocal)
-rangeidgpsdata$DateTimeLocalTest <- rangeidgpsdata$DateTimeLocal
-library(lubridate)
-
-rangeidgpsdata$DateTimeLocalTest <- strptime(rangeidgpsdata$DateTimeLocalTest, "%m/%d/%Y %H:%M")
-rangeidgpsdata$DateTimeLocalTestct <- as.POSIXct(rangeidgpsdata$DateTimeLocalTest, tz = "America/Los_Angeles", format = "%m/%d/%Y %H:%M")
 # Removing the 20 min fixes
-rangeidhour <- subset(rangeidgpsdata, format(rangeidgpsdata$DateTimeLocalTest, "%M") %in% c('00', '01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '55', '56', '57', '58', '59', '54', '53', '52', '51', '50'))
+rangeidhour <- subset(allidgpsdatacut2, format(allidgpsdatacut2$DateTimeLocalTest, "%M") %in% c('00', '01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '55', '56', '57', '58', '59', '54', '53', '52', '51', '50'))
 ## I double checked the sheep that are every four hours to make sure that they are on a 0-4-8-12-16-20-24 schedule. They are all.
 rangeidfourhour <- subset(rangeidhour, format(rangeidhour$DateTimeLocalTest, "%H") %in% c('00', '04', '08', '12', '16', '20', '24'))
+# Including every hour as ~18,000 gps observations, including only every four hour as ~6,000 observations. Both include 28 individual sheep. 
+
+
+## Will need to do the amount of time between points for both time schedules before doing any of my 4 gps movement types.
 
 
 ```
 
+### Cleaning the GPS Data
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-I next subset the data to the time periods that I had camera data for. Keeping with my visitation analyses, I cut the GPS data to only include days when the whole 24-hour had camera coverage, and camera coverage was complete.
-
-Complete Days by Range:
-
-Marbles:
-2019-05-18 - 2019-05-24
-2019-06-05 - 2019-06-11
-2019-06-19 - 2019-06-22
-2019-06-26 - 2019-06-29
-2019-07-11 - 2019-07-13
-2019-07-18 - 2019-07-24
-2019-08-01 - 2019-08-03
-2019-08-07 - 2019-08-09
-
-South Bristols:
-2019-06-05 - 2019-06-15
-2019-06-19 - 2019-07-28
-2019-08-02 - 2019-08-11
-
-Nopah:
-2019-06-07 - 2019-06-12
-2019-06-26 - 2019-07-07
-2019-07-17 - 2019-07-28
-2019-07-30 - 2019-08-06
-
-Castle Piutes:
-2019-05-24 - 2019-05-30
-2019-06-21 - 2019-06-26
-2019-07-12 - 2019-07-14
-2019-07-31 - 2019-08-03
-2019-08-06 - 2019-08-14
-
-NROM:
-2019-06-28 - 2019-07-01
-2019-07-10 - 2019-07-12
-2019-07-21
-2019-08-09 - 2019-08-18
-2019-08-21
+## Mapping the GPS Data
 
 ```{r}
+# Making an individually identifiable ID for each point
+rangeidhour$IndPoint <- paste(rangeidhour$DateTimeLocal, rangeidhour$KI_Known_ID)
 
-
-
-
-
-marbfourhour <- rangeidfourhour[rangeidfourhour$MountainRange == "Marb", ]
-marbcutfourhour <- marbfourhour[(marbfourhour$DateTimeLocalTestct >= as.POSIXct("2019-05-17 10:49:00") & marbfourhour$DateTimeLocalTestct <= as.POSIXct("2019-05-24 23:59:59")) | (marbfourhour$DateTimeLocalTestct >= as.POSIXct("2019-06-04 20:00:00") & marbfourhour$DateTimeLocalTestct <= as.POSIXct("2019-06-12 13:32:00")) | (marbfourhour$DateTimeLocalTestct >= as.POSIXct("2019-06-18 17:19:00") & marbfourhour$DateTimeLocalTestct <= as.POSIXct("2019-06-22 23:59:59"))| (marbfourhour$DateTimeLocalTestct >= as.POSIXct("2019-06-25 14:49:00") & marbfourhour$DateTimeLocalTestct <= as.POSIXct("2019-06-30 10:46:00"))| (marbfourhour$DateTimeLocalTestct >= as.POSIXct("2019-07-10 08:45:00") & marbfourhour$DateTimeLocalTestct <= as.POSIXct("2019-07-13 23:00:18")) | (marbfourhour$DateTimeLocalTestct >= as.POSIXct("2019-07-17 11:46:00") & marbfourhour$DateTimeLocalTestct <= as.POSIXct("2019-07-25 10:30:00")) | (marbfourhour$DateTimeLocalTestct >= as.POSIXct("2019-07-31 20:52:00") & marbfourhour$DateTimeLocalTestct <= as.POSIXct("2019-08-04 13:13:03")) | (marbfourhour$DateTimeLocalTestct >= as.POSIXct("2019-08-06 12:03:00") & marbfourhour$DateTimeLocalTestct <= as.POSIXct("2019-08-10 12:03:23")), ]
-
-sbrsfourhour <- rangeidfourhour[rangeidfourhour$MountainRange == "BrsS", ]
-sbrscutfourhour <- sbrsfourhour[(sbrsfourhour$DateTimeLocalTestct >= as.POSIXct("2019-06-04 15:04:00") & sbrsfourhour$DateTimeLocalTestct <= as.POSIXct("2019-06-16 08:27:00")) | (sbrsfourhour$DateTimeLocalTestct >= as.POSIXct("2019-06-18 17:36:00") & sbrsfourhour$DateTimeLocalTestct <= as.POSIXct("2019-06-25 16:25:00")) | (sbrsfourhour$DateTimeLocalTestct >= as.POSIXct("2019-06-25 17:05:00") & sbrsfourhour$DateTimeLocalTestct <= as.POSIXct("2019-07-29 10:36:00")) | (sbrsfourhour$DateTimeLocalTestct >= as.POSIXct("2019-08-01 14:32:00") & sbrsfourhour$DateTimeLocalTestct <= as.POSIXct("2019-08-12 11:13:00")),]
-  
-cmprfourhour <- rangeidfourhour[rangeidfourhour$MountainRange == "CMPR", ]
-cmprcutfourhour <- cmprfourhour[(cmprfourhour$DateTimeLocalTestct >= as.POSIXct("2019-05-23 15:48:00") & cmprfourhour$DateTimeLocalTestct <= as.POSIXct("2019-05-31 11:18:00")) | (cmprfourhour$DateTimeLocalTestct >= as.POSIXct("2019-06-20 17:47:00") & cmprfourhour$DateTimeLocalTestct <= as.POSIXct("2019-06-27 02:09:00")) | (cmprfourhour$DateTimeLocalTestct >= as.POSIXct("2019-07-11 18:25:00") & cmprfourhour$DateTimeLocalTestct <= as.POSIXct("2019-07-14 18:28:00")) | (cmprfourhour$DateTimeLocalTestct >= as.POSIXct("2019-07-30 14:30:00") & cmprfourhour$DateTimeLocalTestct <= as.POSIXct("2019-08-03 16:46:00")) | (cmprfourhour$DateTimeLocalTestct >= as.POSIXct("2019-08-05 19:10:00") & cmprfourhour$DateTimeLocalTestct <= as.POSIXct("2019-08-15 07:27:00")),]
-
-nopafourhour <- rangeidfourhour[rangeidfourhour$MountainRange == "Nopa", ]
-nopacutfourhour <- nopafourhour[(nopafourhour$DateTimeLocalTestct >= as.POSIXct("2019-06-06 09:18:00") & nopafourhour$DateTimeLocalTestct <= as.POSIXct("2019-06-13 11:04:00")) | (nopafourhour$DateTimeLocalTestct >= as.POSIXct("2019-06-25 09:00:00") & nopafourhour$DateTimeLocalTestct <= as.POSIXct("2019-07-08 12:35:00")) | (nopafourhour$DateTimeLocalTestct >= as.POSIXct("2019-07-16 19:03:00") & nopafourhour$DateTimeLocalTestct <= as.POSIXct("2019-07-29 15:06:00")) | (nopafourhour$DateTimeLocalTestct >= as.POSIXct("2019-07-29 19:55:00") & nopafourhour$DateTimeLocalTestct <= as.POSIXct("2019-08-07 14:49:00")),]
-
-allcutfourhour <- rbind(marbcutfourhour, sbrscutfourhour, cmprcutfourhour, nopacutfourhour)
-
+library(maptools)
+plotattempt <- SpatialPointsDataFrame(rangeidhour[6:5], rangeidhour[21])
+plot(plotattempt)
 
 ```
+
+
 Using CalTopo: 
 Marbles: 597' - 3840' (181 m - 1171 m)
 South Bristols: 703' - 3269' (214 m - 997 m)
