--- a/RBighornThesisGPSDataCleaning.Rmd
+++ b/RBighornThesisGPSDataCleaning.Rmd
@@ -5,7 +5,7 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-setwd("/Users/Danielle Glass/Documents/RWorkingDirectory/Sheepies2/Sheepies2")
+setwd("C:/Users/Danielle Glass/Documents/RWorkingDirectory2/Sheepies3")
 ```
 
 ### Cutting the GPS Data
@@ -108,6 +108,12 @@ allidgpsdatacut <- rbind(marbidgpsdatacut, sbrsidgpsdatacut, cmpridgpsdatacut, n
 allidgpsdatacut1 <- allidgpsdatacut[is.na(allidgpsdatacut$Latitude) == FALSE, ]
 allidgpsdatacut2 <- allidgpsdatacut1[is.na(allidgpsdatacut1$Longitude) == FALSE, ]
 
+#Removed GPS points for after 1595 died. RIP.
+not1595 <- allidgpsdatacut2[allidgpsdatacut2$KI_Known_ID != "BHS_1595", ]
+is1595 <- allidgpsdatacut2[allidgpsdatacut2$KI_Known_ID == "BHS_1595", ]
+is1595cut <- is1595[(is1595$DateTimeLocalTestct < as.POSIXct("2019-08-05 00:00:00")), ]
+allidgpsdatacut3 <- rbind(not1595, is1595cut)
+
 ```
 
 Subsetting to every hour and four hour
@@ -119,7 +125,7 @@ After double checking that all the four-hour collars were on the same schedule, 
 ```{r}
 
 # Removing the 20 min fixes
-rangeidhour <- subset(allidgpsdatacut2, format(allidgpsdatacut2$DateTimeLocalTest, "%M") %in% c('00', '01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '55', '56', '57', '58', '59', '54', '53', '52', '51', '50'))
+rangeidhour <- subset(allidgpsdatacut3, format(allidgpsdatacut3$DateTimeLocalTest, "%M") %in% c('00', '01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '55', '56', '57', '58', '59', '54', '53', '52', '51', '50'))
 ## I double checked the sheep that are every four hours to make sure that they are on a 0-4-8-12-16-20-24 schedule. They are all.
 rangeidfourhour <- subset(rangeidhour, format(rangeidhour$DateTimeLocalTest, "%H") %in% c('00', '04', '08', '12', '16', '20', '24'))
 # Including every hour as ~18,000 gps observations, including only every four hour as ~6,000 observations. Both include 28 individual sheep. 
@@ -142,11 +148,11 @@ library(maptools)
 plotattempt <- SpatialPointsDataFrame(rangeidhour[6:5], rangeidhour[21])
 plot(plotattempt)
 
-library(adehabitatLT)
-ltrangeidhour <- as.ltraj(xy = rangeidhour[, c("Latitude", "Longitude")], date = rangeidhour$DateTimeLocalTestct, id = rangeidhour$IndPoint)
-View(ltrangeidhour)
+# library(adehabitatLT)
+# ltrangeidhour <- as.ltraj(xy = rangeidhour[, c("Latitude", "Longitude")], date = rangeidhour$DateTimeLocalTestct, id = rangeidhour$IndPoint)
+# View(ltrangeidhour)
 
-data.lt_Desert <- as.ltraj(xy = DesertDataDanielleNoDuplicates[, c("UTME", "UTMN")], date = DesertDataDanielleNoDuplicates$DateTimeC, id = DesertDataDanielleNoDuplicates$ID)
+# data.lt_Desert <- as.ltraj(xy = DesertDataDanielleNoDuplicates[, c("UTME", "UTMN")], date = DesertDataDanielleNoDuplicates$DateTimeC, id = DesertDataDanielleNoDuplicates$ID)
 #maybe need to convert to UTM first?
 
 library(moveHMM)
@@ -196,7 +202,7 @@ nrow(pnromidhour)
 # 754 locations for NROM before cleaning.
 
 ```
-First, I cleaned them using elevation data. If the 
+Before looking at HDOP, I first deleted points considered to have location error based on their impossible elevation data (D'Eon et al. 2002).The range of elevations possible in each mountain range was calculated by drawing a polygon around each mountain range outside of CDFW's bighorn population range maps using Caltopo. All points outside of these possible range were eliminated.
 
 Using CalTopo: 
 Marbles: 597' - 3840' (181 m - 1171 m)
@@ -206,6 +212,20 @@ Castle Piute: 2201'-5258' (670 m - 1603 m)
 Nopah: 1392'-5249' (424 m - 1599 m)
 
 ```{r}
+# Marbles
+boxplot(pmarbidhour$Altitude)
+pmarbidhouralt <- pmarbidhour[(pmarbidhour$Altitude >= 181) & (pmarbidhour$Altitude <= 1171), ]
+nrow(pmarbidhouralt)
+# Marbles now have 5475 points, instead of 5688 points.
+plot(pmarbidhouralt, compact = T)
+
+
+
+
+
+
+
+
 
 library(rosm)
 library(prettymapr)
